# ftxui-proj

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt  justfile
.conan/profiles/: default
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh  reinstall-doxygen.sh
cmake/: BoostApplication.cmake  BoostDI.cmake  ClangFormat.cmake  ClangTidy.cmake  GoogleTest.cmake  Memcheck.cmake  buildinfo.h.in
src/: main.cpp
